--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
        <a href="#">Baixar meu e-book</a> 
     </li>
     <LI>
-        <a href="#">Veja Meu Portfólio</a>
+        <a href="https://victorgamadev.my.canva.site/portifolio" target="_blank">Veja Meu Portfólio</a>
     </LI>
     <li>
     <a href="https://rocketseat.com.br/explorer" target="_blank">Conheça o Explorer</a>
     </li>
 </ul>
 <div id="social-links">
-    <a href="https://www.linkedin.com/in/victor-gama-b11450181" target="_blank">
+    <a href="https://github.com/victorgamma1" target="_blank">
     <ion-icon name="logo-github"></ion-icon>
 </a>
-    <a href="https://www.linkedin.com/in/victor-gama-b11450181" target="_blank">
+    <a href="https://www.instagram.com/eng.victorgama/" target="_blank">
     <ion-icon name="logo-instagram"></ion-icon>
 </a>
 
@@ -58,7 +58,7 @@
 
 </div>
 <footer>
-    Feito com ♥ por <a href="https://www.linkedin.com/in/victor-gama-b11450181" target="_blank"> Victor Gama</a>
+    Feito com ♥ por <a href="https://victorgamadev.my.canva.site/portifolio" target="_blank"> Victor Gama</a>
 </footer>
   </div>
   <script   
