nova alteração nos links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </li>
 </ul>
 <div id="social-links">
-    <a href="https://github.com/victorgamma1" target="_blank">
+    <a href="https://github.com/victorgamma1/gamalink" target="_blank">
     <ion-icon name="logo-github"></ion-icon>
 </a>
     <a href="https://www.instagram.com/eng.victorgama/" target="_blank">
